--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,6 @@ social-auth-core==4.5.4
 sqlparse==0.5.0
 typing_extensions==4.12.1
 urllib3==2.2.1
+
+djangorestfilemanager~=2.0.3
+django-filter~=24.2
