--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.8.1
 boto3==1.34.122
 botocore==1.34.122
+Brotli==1.1.0
 certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 cryptography==42.0.7
 defusedxml==0.8.0rc2
+dj-database-url==2.2.0
 Django==5.0.6
 django-cors-headers==4.3.1
 django-filter==24.2
@@ -15,6 +18,8 @@ djangorestfilemanager==2.0.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.2
+gunicorn==22.0.0
+h11==0.14.0
 idna==3.7
 iniconfig==2.0.0
 jmespath==1.0.1
@@ -38,3 +43,5 @@ social-auth-core==4.5.4
 sqlparse==0.5.0
 typing_extensions==4.12.1
 urllib3==2.2.1
+uvicorn==0.30.1
+whitenoise==6.7.0
