--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+attrs==23.2.0
 boto3==1.34.122
 botocore==1.34.122
 Brotli==1.1.0
@@ -21,8 +22,11 @@ djoser==2.2.2
 gunicorn==22.0.0
 h11==0.14.0
 idna==3.7
+inflection==0.5.1
 iniconfig==2.0.0
 jmespath==1.0.1
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 oauthlib==3.2.2
 packaging==24.0
 pluggy==1.5.0
@@ -34,14 +38,18 @@ pytest==8.2.2
 pytest-django==4.8.0
 python-dateutil==2.9.0.post0
 python3-openid==3.2.0
+PyYAML==6.0.1
+referencing==0.35.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+rpds-py==0.18.1
 s3transfer==0.10.1
 six==1.16.0
 social-auth-app-django==5.4.1
 social-auth-core==4.5.4
 sqlparse==0.5.0
 typing_extensions==4.12.1
+uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.30.1
 whitenoise==6.7.0
