--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==42.0.7
 defusedxml==0.8.0rc2
 dj-database-url==2.2.0
@@ -14,21 +16,27 @@ Django==5.0.6
 django-cors-headers==4.3.1
 django-filter==24.2
 django-mailbox==4.10.1
+django-rest-swagger==2.2.0
 django-storages==1.14.3
 django-templated-mail==1.1.1
 djangorestfilemanager==2.0.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.2
+drf-yasg==1.21.7
 gunicorn==22.0.0
 h11==0.14.0
 idna==3.7
 inflection==0.5.1
 iniconfig==2.0.0
+itypes==1.2.0
+Jinja2==3.1.4
 jmespath==1.0.1
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+MarkupSafe==2.1.5
 oauthlib==3.2.2
+openapi-codec==1.3.2
 packaging==24.0
 pluggy==1.5.0
 psycopg2-binary==2.9.9
@@ -38,12 +46,15 @@ pytest==8.2.2
 pytest-django==4.8.0
 python-dateutil==2.9.0.post0
 python3-openid==3.2.0
+pytz==2024.1
 PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 rpds-py==0.18.1
 s3transfer==0.10.1
+setuptools==72.1.0
+simplejson==3.19.2
 six==1.16.0
 social-auth-app-django==5.4.1
 social-auth-core==4.5.4
