--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+amqp==5.2.0
 asgiref==3.8.1
 attrs==23.2.0
+billiard==4.2.0
 boto3==1.34.122
 botocore==1.34.122
 Brotli==1.1.0
+celery==5.4.0
 certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==42.0.7
@@ -34,17 +40,20 @@ Jinja2==3.1.4
 jmespath==1.0.1
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+kombu==5.4.0
 MarkupSafe==2.1.5
 oauthlib==3.2.2
 openapi-codec==1.3.2
 packaging==24.0
 pluggy==1.5.0
+prompt_toolkit==3.0.47
 psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
 pytest==8.2.2
 pytest-django==4.8.0
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python3-openid==3.2.0
 pytz==2024.1
 PyYAML==6.0.1
@@ -60,9 +69,10 @@ social-auth-app-django==5.4.1
 social-auth-core==4.5.4
 sqlparse==0.5.0
 typing_extensions==4.12.1
+tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.30.1
+vine==5.1.0
+wcwidth==0.2.13
 whitenoise==6.7.0
-
-celery~=5.4.0
