configure django channels with redis backend, send notification using shared tasks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
   redis:
     image: redis:latest
     hostname: redis
+    ports:
+      - "6379:6379"
 
   rabbit:
     hostname: rabbit
