--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ celery==5.4.0
 certifi==2024.6.2
 cffi==1.16.0
 channels==4.1.0
+channels-redis==4.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -24,7 +25,7 @@ cryptography==42.0.7
 daphne==4.1.2
 defusedxml==0.8.0rc2
 dj-database-url==2.2.0
-Django==5.0.6
+Django==5.1
 django-cors-headers==4.3.1
 django-filter==24.2
 django-mailbox==4.10.1
@@ -58,6 +59,7 @@ jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 kombu==5.4.0
 MarkupSafe==2.1.5
+msgpack==1.0.8
 oauthlib==3.2.2
 openapi-codec==1.3.2
 packaging==24.0
@@ -79,6 +81,7 @@ python-decouple==3.8
 python3-openid==3.2.0
 pytz==2024.1
 PyYAML==6.0.1
+redis==5.0.8
 referencing==0.35.1
 requests==2.32.3
 requests-oauthlib==2.0.0
@@ -91,7 +94,7 @@ simplejson==3.19.2
 six==1.16.0
 social-auth-app-django==5.4.1
 social-auth-core==4.5.4
-sqlparse==0.5.0
+sqlparse==0.5.1
 Twisted==24.7.0
 txaio==23.1.1
 typing_extensions==4.12.1
