add portainer setup to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,5 +54,15 @@ services:
       - rabbit
       - api
 
+  portainer:
+    image: portainer/portainer-ce:latest
+    ports:
+      - 9443:9443
+    volumes:
+      - portainer_data:/portainer_data
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+
 volumes:
   postgres_data:
+  portainer_data:
