update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,12 @@ ALLOWED_HOSTS=*
 CORS_ALLOW_ALL_ORIGINS=1
 CORS_ALLOW_CREDENTIALS=1
 DB_DATABASE=ManagerX
-DB_USER=
-DB_PASS=
+DB_USER=ManagerX
+DB_PASS=ManagerX
 DB_SERVICE_NAME=db
 DB_PORT=5432
+
+; GOOGLE OAUTH2.0 CONFIG
+GOOGLE_REDIRECT_URL=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
