--- a/requirements.txt
+++ b/requirements.txt
@@ -29,8 +29,11 @@ dj-rest-auth==6.0.0
 Django==5.1
 django-allauth==64.1.0
 django-cors-headers==4.3.1
+django-dirtyfields==1.9.3
 django-filter==24.2
 django-mailbox==4.10.1
+django-model-utils==4.5.1
+django-notifications-hq==1.8.3
 django-rest-knox==5.0.1
 django-rest-swagger==2.2.0
 django-storages==1.14.3
@@ -46,6 +49,10 @@ google-api-python-client==2.140.0
 google-auth==2.33.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
+google-cloud-core==2.4.1
+google-cloud-storage==2.18.2
+google-crc32c==1.5.0
+google-resumable-media==2.7.2
 googleapis-common-protos==1.63.2
 gunicorn==22.0.0
 h11==0.14.0
@@ -58,6 +65,7 @@ iniconfig==2.0.0
 itypes==1.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
+jsonfield==3.1.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 kombu==5.4.0
@@ -66,6 +74,7 @@ msgpack==1.0.8
 oauthlib==3.2.2
 openapi-codec==1.3.2
 packaging==24.0
+pillow==10.4.0
 pluggy==1.5.0
 prompt_toolkit==3.0.47
 proto-plus==1.24.0
@@ -98,6 +107,7 @@ six==1.16.0
 social-auth-app-django==5.4.1
 social-auth-core==4.5.4
 sqlparse==0.5.0
+swapper==1.4.0
 Twisted==24.7.0
 txaio==23.1.1
 typing_extensions==4.12.1
