configure rclone finally

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,12 @@ DB_PASS=ManagerX
 DB_SERVICE_NAME=db
 DB_PORT=5432
 
-; GOOGLE OAUTH2.0 CONFIG
 GOOGLE_REDIRECT_URL=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+GOOGLE_APPLICATION_CREDENTIALS=/usr/src/credentials/managerx-test-d56b2dbaa330.json
+
+RCLONE_USER=
+RCLONE_PASS=
+RCLONE_ADDR=localhost:5572
