prepare project for better deployment, separate prod and debug docker-compose files

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,31 @@
-DEBUG=1
-SECRET_KEY=
-ALLOWED_HOSTS=*
-CORS_ALLOW_ALL_ORIGINS=1
-CORS_ALLOW_CREDENTIALS=1
-DB_DATABASE=ManagerX
-DB_USER=ManagerX
-DB_PASS=ManagerX
-DB_SERVICE_NAME=db
-DB_PORT=5432
+GUNICORN_PORT=8000
+GUNICORN_WORKERS=2
+GUNICORN_TIMEOUT=60
+GUNICORN_LOG_LEVEL=info
+
+DJANGO_SECRET_KEY=ygn%26n=jj2uk1noke8z0i=h_q*fpn1#g!qqx3my@&@p5(=!sd
+DJANGO_DEBUG=false
+DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
+DJANGO_LANGUAGE_CODE=en-us
+DJANGO_TIME_ZONE=UTC
+DJANGO_CSRF_TRUSTED_ORIGINS=
+DJANGO_EMAIL_HOST=localhost
+DJANGO_EMAIL_PORT=25
+DJANGO_EMAIL_HOST_USER=
+DJANGO_EMAIL_HOST_PASSWORD=
+DJANGO_EMAIL_USE_TLS=false
+DJANGO_SERVER_EMAIL=root@localhost
+DJANGO_DEFAULT_FROM_EMAIL=webmaster@localhost
+DJANGO_ADMIN_NAME=
+DJANGO_ADMIN_EMAIL=
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_PASSWORD=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+
+CORS_ALLOWED_ORIGINS=http://0.0.0.0:3000,http://localhost:3000,http://127.0.0.1:3000
+CORS_ALLOW_CREDENTIALS=true
+CORS_ALLOW_METHODS=DELETE,GET,OPTIONS,PATCH,POST,PUT
+CORS_ALLOW_HEADERS=accept,accept-encoding,authorization,content-type,dnt,origin,user-agent,x-csrftoken,x-requested-with
 
 GOOGLE_REDIRECT_URL=
 GOOGLE_CLIENT_ID=
@@ -15,6 +33,6 @@ GOOGLE_CLIENT_SECRET=
 
 GOOGLE_APPLICATION_CREDENTIALS=/usr/src/credentials/managerx-test-d56b2dbaa330.json
 
-RCLONE_USER=
-RCLONE_PASS=
+RCLONE_USER=admin
+RCLONE_PASS=admin
 RCLONE_ADDR=localhost:5572
