--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,4 +1,48 @@
+version: "3.9"
 services:
+
+  api:
+    build: .
+    image: django-docker
+    env_file: .env
+    environment:
+      - "DJANGO_DEBUG=true"
+    restart: unless-stopped
+    command: ["/docker-cmd.sh", "--debug"]
+    volumes:
+      - "media-data:/var/www/media"
+      - "./api:/usr/src/api"  # mount the source code for watching changes
+    ports:
+      - "8000:8000"
+
+  celery:
+    container_name: worker
+    build: .
+    image: django-docker
+    env_file: .env
+    command: celery -A ManagerX-api worker -l DEBUG
+    volumes:
+      - "./api:/usr/src/api"
+    environment:
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbit:5672/
+    depends_on:
+      - redis
+      - rabbit
+      - api
+
+  # Redis - result backend
+  redis:
+    image: redis:latest
+    hostname: redis
+    ports:
+      - "6379:6379"
+
+  rabbit:
+    hostname: rabbit
+    image: rabbitmq:latest
+    ports:
+      - "5672:5672"
+      - "15672:15672"  # here, we can access rabbitmq management plugin
 
   rclone:
     image: rclone/rclone:latest
@@ -50,66 +94,6 @@ services:
     depends_on:
       - rclone
 
-  db:
-    image: postgres:15
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: ManagerX
-      POSTGRES_USER: ManagerX
-      POSTGRES_PASSWORD: ManagerX
-    ports:
-      - "5433:5432"
-
-  api:
-    container_name: ManagerX-api
-    build:
-      context: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/usr/src/app/
-      - ./media:/usr/src/app/media/
-      - ~/Documents/credentials/:/usr/src/credentials/
-#      - /Users/guluadim/mnt:/usr/src/app/media/mnt
-    ports:
-      - "8000:8000"
-    depends_on:
-      - db
-    env_file: ".env"
-    environment:
-      DJANGO_SETTINGS_MODULE: ManagerX-api.settings
-
-  # Redis - result backend
-  redis:
-    image: redis:latest
-    hostname: redis
-    ports:
-      - "6379:6379"
-
-  rabbit:
-    hostname: rabbit
-    image: rabbitmq:latest
-    ports:
-      - "5672:5672"
-      - "15672:15672"  # here, we can access rabbitmq management plugin
-
-  celery:
-    container_name: worker
-    build:
-      context: .
-    command: celery -A ManagerX-api worker -l INFO
-    volumes:
-      - .:/usr/src/app/
-      - ~/Documents/credentials/:/usr/src/credentials/
-#      - /Users/guluadim/mnt:/usr/src/app/media/mnt
-    env_file: ".env"
-    environment:
-      - CELERY_BROKER_URL=amqp://guest:guest@rabbit:5672/
-    depends_on:
-      - redis
-      - rabbit
-      - api
-
   portainer:
     image: portainer/portainer-ce:latest
     ports:
@@ -120,5 +104,5 @@ services:
     restart: unless-stopped
 
 volumes:
-  postgres_data:
+  media-data:
   portainer_data:
