--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+POSTGRES_USER=django_user
+POSTGRES_PASSWORD=django_user_password
+POSTGRES_DB=django_db
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+
 GUNICORN_PORT=8000
 GUNICORN_WORKERS=2
 GUNICORN_TIMEOUT=60
