--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,10 @@ GOOGLE_CLIENT_SECRET=
 
 GOOGLE_APPLICATION_CREDENTIALS=/usr/src/credentials/managerx-test-d56b2dbaa330.json
 
-RCLONE_USER=admin
-RCLONE_PASS=admin
+RCLONE_USERNAME=admin
+RCLONE_PASSWORD=admin
+RCLONE_PORT=5572
+PUID=1000
+PGID=1000
 RCLONE_ADDR=localhost:5572
+TZ=Asia/Tbilisi
