--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,7 +18,7 @@ services:
       - media_volume:/var/www/media
       - ./rclone/config:/rclone/config
     expose:
-      - 80
+      - 8000
     depends_on:
       - postgres
     networks:
@@ -44,6 +44,8 @@ services:
     hostname: redis
     expose:
       - 6379
+    networks:
+      - app_network
 
   rabbit:
     hostname: rabbit
@@ -51,6 +53,8 @@ services:
     expose:
       - 15672
       - 5672
+    networks:
+      - app_network
 
 
   rclone:
@@ -83,9 +87,11 @@ services:
       - --cache-dir=/vfsCache
     expose:
       - 5572
-    environment:
-      - TZ=America/New_York
+    env_file:
+      - .env
     restart: unless-stopped
+    networks:
+      - app_network
 
   rclone_initializer:
     build:
@@ -98,6 +104,8 @@ services:
     restart: unless-stopped
     depends_on:
       - rclone
+    networks:
+      - app_network
 
   nginx:
     build:
