--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,23 +2,30 @@ upstream api_upstream {
    server api:8000;
 }
 
+upstream uvicorn {
+   server api:8000;
+}
+
+map $http_upgrade $connection_upgrade {
+   default upgrade;
+   '' close;
+}
+
 server {
    listen 80;
    server_name localhost;
-   #server_name can add your domain or Ip address for your server in the production
-   client_max_body_size 200M;
+   client_max_body_size 4G;
 
-   # Add security headers
+   # Security headers
    add_header X-Frame-Options "SAMEORIGIN";
    add_header X-Content-Type-Options "nosniff";
    add_header X-XSS-Protection "1; mode=block";
    add_header Referrer-Policy "strict-origin-when-cross-origin";
    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';";
-
-   # Hide Nginx version
    server_tokens off;
 
    location / {
+      # Proxy settings for HTTP connections
       proxy_set_header X-Url-Scheme $scheme;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
@@ -30,6 +37,19 @@ server {
       proxy_send_timeout 60s;
       proxy_read_timeout 60s;
    }
+
+   # WebSocket connection settings
+   location /ws/ {
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_redirect off;
+      proxy_buffering off;
+      proxy_pass http://uvicorn;
+   }
+
 
    # Deny access to hidden files
    location ~ /\. {
